--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.11",
     "@reduxjs/toolkit": "^2.2.0",
     "axios": "^1.6.7",
+    "emoji-picker-react": "^4.9.2",
     "firebase": "^10.8.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
@@ -25,6 +26,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-toastify": "^10.0.4",
     "styled-components": "^6.1.6",
     "yup": "^1.3.3"
